Chapter05/objects/Sales_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Sales settings</description>
    <fields>
        <fullName>Amount_Threshold__c</fullName>
        <defaultValue>500000</defaultValue>
        <inlineHelpText>Opportunity amount threashold for creation/update (validation rules)</inlineHelpText>
        <label>Amount Threshold</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Big_Customers_Division__c</fullName>
        <defaultValue>&quot;Big Customers&quot;</defaultValue>
        <label>Big Customers Division</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Department_Name__c</fullName>
        <defaultValue>&quot;Sales&quot;</defaultValue>
        <label>Sales Department Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Sales Settings</label>
</CustomObject>